# mlops-production-system

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml
issues/: 00-foundation-setup.md  01-project1-cv-classification.md  02-project2-realtime-ml-de.md  03-project3-production-system.md  1.md  learning-resources.md  project_setup_and_architecture.md
src/: __init__.py
